--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/83a58a6b-7eb0-49f5-ac35-1a7a3bd00b00.jfif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BLOG-SPACE</title>
+    <title>BlogSpace</title>
   </head>
   <body>
     <div id="root"></div>
